--- a/src/components/footer.pug
+++ b/src/components/footer.pug
@@ -6,19 +6,19 @@ mixin footer()
                     a(href="index.html").logo 
                         img(src="@img/logo.svg", alt="" draggable="false") 
                     .footer__medias 
-                        a(href="https://whatsapp.com").footer__media 
+                        a(href="https://api.whatsapp.com/send?phone=79661195708").footer__media 
                             img(src="@img/whatsapp.svg", alt="" draggable="false")
                             | Написать в WhatsApp
-                        a(href="https://telegram.com").footer__media 
+                        a(href="tg://resolve?domain=VF_Stroy/").footer__media 
                             img(src="@img/telegram.svg", alt="" draggable="false")
                             | Написать в Телеграм
-                        a(href="https://vk.com").footer__media 
+                        a(href="https://vk.com/club126088443").footer__media 
                             img(src="@img/vk.svg", alt="" draggable="false")
                             | ВКонтакте
-                        a(href="https://ok.ru").footer__media 
+                        a(href="https://ok.ru/group/70000001900502").footer__media 
                             img(src="@img/ok.svg", alt="" draggable="false")
                             | Одноклассники
-                        a(href="https://yandex.ru").footer__media 
+                        a(href="https://dzen.ru/id/5eb5a35795fafa3409329b8f").footer__media 
                             img(src="@img/zen.svg", alt="" draggable="false")
                             | Яндекс Дзен
                 .footer__right 
