--- a/src/components/advantages.pug
+++ b/src/components/advantages.pug
@@ -8,20 +8,20 @@ mixin advantages()
                 p.advantages__desc При необходимости использования заемных средств помогут оформить ипотеку через нашего специалиста в банке и подберут удобную форму финансирования вашего проекта.
             .advantages__wrapper 
                 .advantages__row
-                    .advantages__item 
+                    a(href="#!").advantages__item 
                         p.advantages__subtitle Каталог проектов
                         .advantages__img 
                             img(src="@img/advantages-img-1.png", alt="" draggable="false")
-                    .advantages__item 
+                    a(href="#!").advantages__item 
                         p.advantages__subtitle Строительство домов
                         .advantages__img 
                             img(src="@img/advantages-img-2.png", alt="" draggable="false")
                 .advantages__row
-                    .advantages__item 
+                    a(href="#!").advantages__item 
                         p.advantages__subtitle Каталог материалов
                         .advantages__img 
                             img(src="@img/advantages-img-3.png", alt="" draggable="false")
-                    .advantages__item 
+                    a(href="#!").advantages__item 
                         p.advantages__subtitle Ипотека на строительство
                         .advantages__img 
                             img(src="@img/advantages-img-4.png", alt="" draggable="false")
