--- a/src/components/footer.pug
+++ b/src/components/footer.pug
@@ -26,80 +26,80 @@ mixin footer()
                         ul.footer__list 
                             p.footer__subtitle ЭТАЖНОСТЬ
                             li.footer__li 
-                                a(href="#!").footer__link Одноэтажные дома
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/etaj-is-1/").footer__link Одноэтажные дома
                             li.footer__li 
-                                a(href="#!").footer__link Двухэтажные дома
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/etaj-is-2/").footer__link Двухэтажные дома
                             li.footer__li 
-                                a(href="#!").footer__link Трехэтажные дома 
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/etaj-is-3/").footer__link Трехэтажные дома 
                             li.footer__li 
-                                a(href="#!").footer__link Дома с подвалом/цокольным этажом
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/dop-is-podval/").footer__link Дома с подвалом/цокольным этажом
                         ul.footer__list 
                             p.footer__subtitle КОЛИЧЕСТВО СПАЛЕН
                             li.footer__li 
-                                a(href="#!").footer__link Дома с одной спальней
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/spalny-is-1/").footer__link Дома с одной спальней
                             li.footer__li 
-                                a(href="#!").footer__link Дома с двумя спальнями
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/spalny-is-2/").footer__link Дома с двумя спальнями
                             li.footer__li 
-                                a(href="#!").footer__link Дома с тремя спальнями
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/spalny-is-3/").footer__link Дома с тремя спальнями
                             li.footer__li 
-                                a(href="#!").footer__link Дома с четырьмя спальнями
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/spalny-is-4/").footer__link Дома с четырьмя спальнями
                             li.footer__li 
-                                a(href="#!").footer__link Дома с пятью спальнями
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/spalny-is-5/").footer__link Дома с пятью спальнями
                             li.footer__li 
-                                a(href="#!").footer__link Дома с шестью и более спальнями
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/spalny-is-6/").footer__link Дома с шестью и более спальнями
                         ul.footer__list 
                             p.footer__subtitle КОНСТРУКЦИЯ
                             li.footer__li 
-                                a(href="#!").footer__link Дома с мансардой
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/dop-is-mansarda/").footer__link Дома с мансардой
                             li.footer__li 
-                                a(href="#!").footer__link Дома с террасой
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/dop-is-terrasa/").footer__link Дома с террасой
                             li.footer__li 
-                                a(href="#!").footer__link Дома с гаражом
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/garaj-is-1-or-2-or-3/").footer__link Дома с гаражом
                             li.footer__li 
-                                a(href="#!").footer__link Дома без гаража
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/garaj-is-none/").footer__link Дома без гаража
                             li.footer__li 
-                                a(href="#!").footer__link Дома с баней/сауной
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/banya-is-y/").footer__link Дома с баней/сауной
                             li.footer__li 
-                                a(href="#!").footer__link Дома для узких участков
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/uzkiy-is-y/").footer__link Дома для узких участков
                             li.footer__li 
-                                a(href="#!").footer__link Дом на две семьи
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/two_fam-is-y/").footer__link Дом на две семьи
                             li.footer__li 
-                                a(href="#!").footer__link Дом с плоской крышей
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/ploskaya_krovla-is-y/").footer__link Дом с плоской крышей
                         ul.footer__list 
                             p.footer__subtitle ПЛОЩАДЬ
                             li.footer__li 
-                                a(href="#!").footer__link Дома до 140 м2
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/ploshad-from-101-to-140/").footer__link Дома до 140 м2
                             li.footer__li 
-                                a(href="#!").footer__link Дома от 141 – до 200 м2
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/ploshad-from-141-to-200/").footer__link Дома от 141 – до 200 м2
                             li.footer__li 
-                                a(href="#!").footer__link Дома от 201 – до 300 м2
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/ploshad-from-201-to-300/").footer__link Дома от 201 – до 300 м2
                             li.footer__li 
-                                a(href="#!").footer__link Дома от 301 – до 400 м2
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/ploshad-from-301-to-400/").footer__link Дома от 301 – до 400 м2
                             li.footer__li 
-                                a(href="#!").footer__link Дома более 400 м2
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/ploshad-from-400/").footer__link Дома более 400 м2
                     .footer__right-bottom 
                         ul.footer__list 
                             p.footer__subtitle АРХИТЕКТУРНЫЙ СТИЛЬ
                             li.footer__li 
-                                a(href="#!").footer__link Дома в стиле Хай-тек
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/style-is-haitek/").footer__link Дома в стиле Хай-тек
                             li.footer__li 
-                                a(href="#!").footer__link Дома в стиле БарнХаус
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/style-is-barnhouse/").footer__link Дома в стиле БарнХаус
                             li.footer__li 
-                                a(href="#!").footer__link Дома в стиле Райт
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/style-is-rait/").footer__link Дома в стиле Райт
                             li.footer__li 
-                                a(href="#!").footer__link Классические дома
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/style-is-klassika/").footer__link Классические дома
                             li.footer__li 
-                                a(href="#!").footer__link Современные дома
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/style-is-sovremenniy/").footer__link Современные дома
                         ul.footer__list 
                             p.footer__subtitle МАТЕРИАЛ
                             li.footer__li 
-                                a(href="#!").footer__link Дома из газоблоков
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/material-is-gazobeton/").footer__link Дома из газоблоков
                             li.footer__li 
-                                a(href="#!").footer__link Дома из пеноблоков
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/material-is-penobloki/").footer__link Дома из пеноблоков
                             li.footer__li 
-                                a(href="#!").footer__link Дома из керамических блоков
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/material-is-keramicheskie-bloki/").footer__link Дома из керамических блоков
                             li.footer__li 
-                                a(href="#!").footer__link Дома из кирпича
+                                a(href="https://www.vfstroy.ru/catalog/project/filter/material-is-kirpich/").footer__link Дома из кирпича
         .footer__bottom 
             .footer__bottom-body.container 
                 p.footer__desc © 2009-2023 Все права на содержание сайта vfstroy.ru принадлежат ООО "ВФ Строй". Полное или частичное воспроизведение возможно только по письменному разрешению правообладателя.
