--- a/src/components/news.pug
+++ b/src/components/news.pug
@@ -4,7 +4,7 @@ mixin news()
             .news__top-body.container 
                 .news__top-left
                     h2.news__title Публикации
-                    .news__img 
+                    a(href="#!").news__img 
                         img(src="@img/news-img.png", alt="" draggable="false")
                         p.news__subtitle Новости
                 .news__top-right
